Alterado classes para public static Trocado objetos por referencia de classe Aparecendo nome de usuario para troca Fatla: transformar string em KEY minerar