@@ -1,6 +1,7 @@
 package peer2peerproject;
 
 import com.sun.org.apache.xerces.internal.impl.dv.util.Base64;
+import java.io.IOException;
 import java.security.InvalidKeyException;
 import java.security.KeyFactory;
 import java.security.KeyPair;
@@ -16,6 +17,7 @@ import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
+import sun.misc.BASE64Decoder;
 
 /**
  *
@@ -118,12 +120,15 @@ public class Criptografar {
     }
 
     //CONVERTER STRINGS PARA KEY
-    public static PublicKey stringToPublicKey(String pubkey) throws NoSuchAlgorithmException, InvalidKeySpecException {
+    public static PublicKey stringToPublicKey(String pubkey) throws InvalidKeySpecException, NoSuchAlgorithmException, IOException {
         KeyFactory keyFactory = KeyFactory.getInstance(ALGORITHM);
-        /*System.out.println(pubkey);
-        System.out.println(pubkey.getBytes());
-        System.out.println(Base64.decode(pubkey));
-        System.out.println(Base64.encode(pubkey.getBytes()));*/
+        System.out.println(pubkey);
+        //System.out.println(pubkey.getBytes());
+        //BASE64Decoder decoder = new BASE64Decoder();
+        //byte[] teste = decoder.decodeBuffer(pubkey);
+        //System.out.println(Base64.decode(pubkey));
+        //System.out.println(teste);
+        //System.out.println(Base64.encode(pubkey.getBytes()));
 
         EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(Base64.decode(pubkey));
         PublicKey publicKey2 = keyFactory.generatePublic(publicKeySpec);
